<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lattoo.pushphoto.AddLayersActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/Layer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="156dp"
            android:layout_marginTop="55dp"
            android:text="@string/Layer_1"
            android:textColor="#1279d1"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/layer1photo"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="92dp"
            android:text="@string/Add_Layer1_Photos"
            android:textSize="12sp"
            android:onClick="uploadlayer1photo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/layer1sample"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="139dp"
            android:text="@string/Add_Layer1_Samples"
            android:onClick="uploadlayer1samples"
            android:layout_marginRight="8dp"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/Layer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="156dp"
            android:layout_marginTop="212dp"
            android:text="@string/Layer_2"
            android:textColor="#1279d1"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/layer2photo"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="249dp"
            android:text="@string/Add_Layer2_Photos"
            android:textSize="12sp"
            android:onClick="uploadlayer2photo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/layer2sample"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="296dp"
            android:text="@string/Add_Layer2_Samples"
            android:textSize="12sp"
            android:onClick="uploadlayer2samples"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/Layer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="156dp"
            android:layout_marginTop="369dp"
            android:text="@string/Layer_3"
            android:textColor="#1279d1"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/layer3photo"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="406dp"
            android:text="@string/Add_Layer3_Photos"
            android:textSize="12sp"
            android:onClick="uploadlayer3photo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/layer3sample"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="453dp"
            android:text="@string/Add_Layer3_Samples"
            android:textSize="12sp"
            android:onClick="uploadlayer3samples"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/Layer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="156dp"
            android:layout_marginTop="526dp"
            android:text="@string/Layer_4"
            android:textColor="#1279d1"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/layer4photo"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="562dp"
            android:text="@string/Add_Layer4_Photos"
            android:textSize="12sp"
            android:onClick="uploadlayer4photo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/layer4sample"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="609dp"
            android:text="@string/Add_Layer4_Samples"
            android:textSize="12sp"
            android:onClick="uploadlayer4samples"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/Layer5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="156dp"
            android:layout_marginTop="683dp"
            android:text="@string/Layer_5"
            android:textColor="#1279d1"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/layer5photo"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="719dp"
            android:text="@string/Add_Layer5_Photos"
            android:textSize="12sp"
            android:onClick="uploadlayer5photo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/layer5sample"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="766dp"
            android:text="@string/Add_Layer5_Samples"
            android:textSize="12sp"
            android:onClick="uploadlayer5samples"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/BoxName"
            android:layout_width="230dp"
            android:layout_height="23dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="Box Name: "
            android:textColor="#ec3e04"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/PurchaseDate"
            android:layout_width="180dp"
            android:layout_height="23dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:text="Purchased:DD-MM-YYYY"
            android:textColor="#ec3e04"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
